add pagination for /storage and /deck
